linuxmuster-linbo (2.3.29-0) babo62; urgency=low

  * mount partitions using labels if labels were assigned before (see issue #78).
  * new linbo_cmd and linbo_wrapper parameter "label", which allows to label
    partitions later.
  * implemented loadmodules=module1,module2 linbo kernel parameter.
  * 64bit kernel framebuffer configuration fixes.
  * minor code improvements.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 20 Oct 2017 15:18:34 +0000

linuxmuster-linbo (2.3.28-0) babo62; urgency=low

  * reworked 64bit kernel framebuffer configuration.
  * updated kernel to 4.9.50.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 21 Sep 2017 08:16:44 +0000

linuxmuster-linbo (2.3.27-0) babo62; urgency=low

  * fixed 64bit msoffice reactivation (issue #72).
  * restore activation tokens even if no keys are provided (issue #75).
  * don't delete custom files in C:\linuxmuster-win on windows partition anymore (issue #74).
  * added experimental msoffice 2016 reactivation support (issue #73).
  * added experimental windows 10 reactivation support (issue #71).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 26 Jul 2017 16:26:56 +0000

linuxmuster-linbo (2.3.26-0) babo62; urgency=low

  * debian/rules: fixed file distribution in linuxmuster-linbo-common7 pkg.
  * linuxmuster-linbo7:
    - added script mkgrubhostimg.py for host specific pxe boot image creation.
    - removed module variables in mkgrubnetdir.sh using global variables from
      linuxmuster-base7.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 26 Jul 2017 16:26:56 +0000

linuxmuster-linbo (2.3.25-1) babo62; urgency=low

  * packages consolidation:
    - improved file distribution between packages.
    - moved all common files to common packages.
    - use build host grub packages for i386 modules rather than downloaded ones.
    - linuxmuster-linbo7: create grub's netdirs on target host during postinst.
    - moved update-linbofs to linuxmuster-linbo7's postinst.
