@@ -1,1 +1,1 @@
-LINBO 2.3.29-0
+LINBO 2.3.30-0
