@@ -1,3 +1,9 @@
+linuxmuster-linbo (2.3.30-0) babo62; urgency=low
+
+  * cache device fix during init.
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sun, 29 Oct 2017 10:24:16 +0000
+
 linuxmuster-linbo (2.3.29-0) babo62; urgency=low
 
   * mount partitions using labels if labels were assigned before (see issue #78).
